--- a/client/src/components/CoinForm/CoinForm.module.css
+++ b/client/src/components/CoinForm/CoinForm.module.css
@@ -1,6 +1,6 @@
 .title {
   font-size: 2.4rem;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: 600;
   margin-bottom: 25px;
   padding-top: 50px;
@@ -12,7 +12,7 @@
 
 .btnGray {
   background-color: #1c1e2e;
-  font-family: "Poppins";
+  font-family: 'Poppins';
   border-radius: 3px;
   box-shadow: 2px 2px 2px rgb(58, 82, 145);
   color: #ccffff;
@@ -30,12 +30,18 @@
 .btnGray:active {
   box-shadow: 0 0 #ccc;
 }
+.modalContainer {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  top: 300px;
+  justify-content: center;
+  align-items: center;
+}
 .CoinForm {
   position: absolute;
   width: 350px;
   height: 300px;
-  top: 230px;
-  left: 37.5%;
   border-radius: 20px;
   display: flex;
   justify-content: center;
@@ -48,7 +54,7 @@
   );
 }
 .bodyText {
-  font-family: "Neutra", sans-serif;
+  font-family: 'Neutra', sans-serif;
   color: #ccffff;
   margin-right: 10px;
 }
@@ -67,9 +73,6 @@
 @media only screen and (max-width: 800px) {
   .CoinForm {
     flex-direction: column;
-    margin-top: 30px;
-    left: 15%;
-    top: 70px;
   }
   .title {
     padding-top: 50px;
@@ -80,7 +83,6 @@
   .CoinForm {
     flex-direction: column;
     width: 330px;
-    left: 4%;
   }
 }
 
